# mail-forward

./: Cargo.toml  Dockerfile  Procfile  docker-compose.yml
.github/workflows/: heroku.yml
src/: config.rs  email_service.rs  errors.rs  main.rs  models.rs
src/config/: mod.rs  models.rs
src/config/strategies/: env_config_loader.rs  mod.rs
