[package]
name = "mail-forward"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
dotenv = "0.15.0"
lazy_static = "1.4.0"
lettre = "0.11.4"
lettre_email = "0.9.4"
serde = { version = "1.0.197", features = ["derive"] }
thiserror = "1.0.57"
validator = { version = "0.16.1", features = ["derive"] }
